examples/test/testpolicy10223.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10223
  namespace: namespace308
spec:
  podSelector:
    matchLabels:
      key22: value2
      key45: value38
      key38: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value45
      podSelector:
        matchLabels:
          key12: value47
